manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-spell-checker
  namespace: starlight-spell-checker
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-spell-checker
  ports:
    - name: http
      port: 80
