manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-spell-checker
  namespace: starlight-spell-checker
spec:
  rules:
    - host: starlight-spell-checker.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-spell-checker
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-spell-checker.trueberryless.org
      secretName: starlight-spell-checker
